Mise à jour des unités lexciales:
# Détails:
 - Ajout des unités lexicales pour zoot4
 - Le csteE ne peut plus contenir de "-" car le "-" unaire est géré par le token MOINS
 - Mise à jour de la grammaire pour prendre en compte ces modifications
 - Ajout d'un gitignore pour le build.xml

--- a/src/build.xml
+++ b/src/build.xml
@@ -34,7 +34,8 @@
         <java classname="java_cup.Main" fork="yes" failonerror="yes" >
             <arg line="-symbols CodesLexicaux -parser AnalyseurSyntaxique ${src}/Grammaire.cup" />
             <classpath>
-                <pathelement path="${java.class.path}:/home/profil/wrobel5/ArchivesJava/java-cup-11b.jar" />
+                <pathelement
+                        path="${java.class.path}:D:\Documents\Google-Drive\Documents\Cours\Licence-Informatique\S6_3\Compilation\Zoot\.deps\java-cup-11b.jar"/>
             </classpath>
         </java>
         <move file="AnalyseurSyntaxique.java" tofile="${src}/AnalyseurSyntaxique.java" />
@@ -63,7 +64,8 @@
         <java classname="jflex.Main" fork="yes" failonerror="yes" >
             <arg line="${src}/UnitesLexicales.jflex" />
             <classpath>
-                <pathelement path="${java.class.path}:/home/profil/wrobel5/ArchivesJava/jflex-1.8.2.jar" />
+                <pathelement
+                        path="${java.class.path}:D:\Documents\Google-Drive\Documents\Cours\Licence-Informatique\S6_3\Compilation\Zoot\.deps\jflex-full-1.8.2.jar"/>
             </classpath>
         </java>
     </target>
